--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
+    "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.15",
+    "s": "^1.0.0",
     "validator": "^13.7.0"
   }
 }
