--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.15",
     "s": "^1.0.0",
+    "sequelize": "^6.16.0",
     "validator": "^13.7.0"
   }
 }
