--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "bs-custom-file-input": "^1.3.4",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
+    "popper.js": "^1.16.1",
+    "sweetalert2": "^11.4.0",
     "vue": "^3.0.0",
+    "vue-cli-plugin-axios": "^0.0.4",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
