--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "mongoose": "^6.1.3",
     "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "s": "^1.0.0",
     "sequelize": "^6.16.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
