--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "groupomania",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server"
   },
@@ -15,13 +15,19 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.3.0",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
     "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
+    "pg-format": "^1.0.4",
     "s": "^1.0.0",
     "sequelize": "^6.16.0",
     "validator": "^13.7.0"
